--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
     <nav class="navbar">
         <ul class="navbar.links">
             <li><a href="#">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="career.html">CAREER</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
             <li><a href="https://www.linkedin.com/in/emelie-bj%C3%B6rkman-06826b138/"><img alt="facebook logo"
-                        src="facebook-logo.png" width="30" height="30"></a></li>
+                        src="linkedIn.png" width="80" height="80"></a></li>
         </ul>
     </nav>
 
@@ -33,21 +30,21 @@
         <br>
         <br>
         <div class="flex-container">
-            <div class="flex-box">
+            <div class="flex-box" onclick="showAbout()">
+                <br>
                 <h2>ABOUT ME</h2>
                 <br>
-                <p>I grew up in a small village outside Kristianstad</p>
+
             </div>
             <div class="flex-box">
-                <h2>EXPERIENCES</h2>
-                <br><br>
                 <br>
+                <h2>EXPERIENCES</h2>
                 <br>
             </div>
             <div class="flex-box">
                 <br>
                 <h3>MY MOTIVATION</h3>
-                <p>motivation forward with this program</p>
+                <br>
             </div>
             <br>
             <div class="flex-container">
@@ -59,23 +56,17 @@
                 </div>
     </main>
 
+    <script>
+        function showAbout() {
+            alert("About Me section!");
+        }
 
-
-
+    </script>
 
     <footer id="footer">
         <div class="textinfooter">
             <br>
             <p>Copyright E.Björkman 2025</p>
-        </div>
-
-        <div class="divtwo">
-            <a href="https://www.instagram.com/janinevanwyk5/">
-                <img alt="instagram logo" src="instagram.logo.png" width="30" height="30"></a>
-
-            <a href="https://www.facebook.com/emelie.bjorkman.7">
-                <img alt="facebook-logo" src="x.logo.twitter.png" width="30" height="30"></a>
-
         </div>
     </footer>
 
