added a function aboutme

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 <br>
                 <h2>ABOUT ME</h2>
                 <br>
+                <p></p>
+                <br>
 
             </div>
             <div class="flex-box">
@@ -58,7 +60,7 @@
 
     <script>
         function showAbout() {
-            alert("About Me section!");
+            window.location.href = "aboutme.html";
         }
 
     </script>
@@ -69,6 +71,7 @@
             <p>Copyright E.Björkman 2025</p>
         </div>
     </footer>
+
 
 </body>
 
